--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+  background: #ff33d4;
+  height: 20vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.todoList {
+  width: 900px;
+  margin: 0 auto;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.todoList header {
+  position: relative;
+  bottom: 70px;
+  padding: 2rem 1rem;
+
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5rem;
+  text-align: left;
+
+  border: none;
+  border-radius: 5px;
+  background-color: #fff;
+  box-shadow: 5px 5px 5px rgba(103, 103, 103, 0.553);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todoList header h4 {
+  margin-bottom: 1rem;
+}
+
+.todoList header input[type='text'] {
+  width: 80%;
+  height: 3rem;
+
+  font-size: 20px;
+
+  padding: 0.5rem;
+
+  border-radius: 5px;
+  border: 3px solid;
+  border-color: rgb(195, 195, 195);
+}
+
+.todoList header input[type='text']:focus {
+  outline: thin dotted;
+  outline: 0px auto -webkit-focus-ring-color;
+  outline-offset: 0px;
+}
+
+.todoList header input[type='submit'] {
+  border: none;
+  height: 3rem;
+  background-color: #ff33d4;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 1rem;
+  padding: 0.5rem 2rem;
+  margin-left: 2rem;
+  cursor: pointer;
+}
+
+.itemLista {
+  display: flex;
 }
