--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,103 @@
   cursor: pointer;
 }
 
+.todoList header input[type='submit']:hover {
+  border: 4px solid #ff33d4;
+  color: #ff33d4;
+  font-weight: bold;
+  background-color: #fff;
+}
+
+.todoList .princial-lista-itens {
+  border: 3px solid rgb(193, 193, 193);
+}
+
+.todoList .editar-iten {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: rgb(159, 159, 159);
+
+  padding: 2rem 1rem;
+}
+
+.todoList .editar-iten input[type='text'] {
+  height: 3rem;
+  width: 75%;
+
+  font-size: 20px;
+
+  padding: 0.5rem;
+
+  border-radius: 5px;
+  border: 3px solid;
+  border-color: rgb(195, 195, 195);
+}
+
+.todoList .editar-iten input[type='text']:focus {
+  outline: thin dotted;
+  outline: 0px auto -webkit-focus-ring-color;
+  outline-offset: 0px;
+}
+
+.todoList .editar-iten input[type='submit'] {
+  height: 3rem;
+  padding: 0.5rem 1.5rem;
+
+  border: 4px solid #ff33d4;
+  border-radius: 5px;
+  color: #ff33d4;
+  background-color: #fff;
+
+  font-weight: 600;
+  font-size: 20px;
+
+  cursor: pointer;
+}
+
+.todoList .editar-iten input[type='submit']:hover {
+  background-color: #ff33d4;
+  color: #fff;
+}
+
 .itemLista {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem 1.7rem;
+
+  border-top: 3px solid rgb(193, 193, 193);
+}
+
+.lista #check {
+  all: unset;
+  border: 1px solid rgb(163, 163, 163);
+  border-radius: 5px;
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+  padding: 2px;
+}
+
+.lista #check:checked {
+  background-color: rgb(112, 112, 250);
+}
+
+.itemLista p {
+  display: inline;
+  margin-left: 2rem;
+  font-size: 2rem;
+  color: rgb(163, 163, 163);
+}
+
+.itemLista button {
+  border: none;
+  background-color: transparent;
+  font-size: 24px;
+  color: #ff33d4;
+  margin-left: 2rem;
+  cursor: pointer;
 }
